--- a/src/AuthHelpers/auth.css
+++ b/src/AuthHelpers/auth.css
@@ -49,13 +49,13 @@
 }
 
 /* Date picker icon div */
-#root > div > div > div > form > div > div {
+div.css-1laqsz7-MuiInputAdornment-root {
     height: 35px;
     width: 35px;
 }
 
 /* Date picker button */
-#root > div > div > div > form > div > div > button {
+div.css-1laqsz7-MuiInputAdornment-root > button {
     height: 35px;
     width: 35px;
 }
@@ -96,4 +96,17 @@ select {
 
 .submit-button:active {
     background-color: darkgreen;
+}
+
+.error-container {
+    position: relative;
+    height: 0;
+}
+
+.error-messsage {
+    color: red;
+    font-size: x-small;
+    position: absolute;
+    top: -16px;
+    left: 2px;
 }
