--- a/src/styles.css
+++ b/src/styles.css
@@ -47,13 +47,18 @@ body {
     padding: 0 15px;
 }
 
-.nav a {
+.nav a,
+.signout {
     color: inherit;
     text-decoration: none;
     height: 100%;
     display: flex;
     align-items: center;
     padding: 0;
+}
+
+.signout:hover {
+    cursor: pointer;
 }
 
 .nav li:hover {
